# hyprplane

./: README.md  hyprland_winpinner_keybinds.conf  pyproject.toml
hyprplane/: cacher.py  commander.py  constants.py  control-actions.py  drawer.py  event.py  ipc.py  libnotify.py  logger.py  run-socket.py  run.py  server.py  utils.py  version.py
hyprplane/controller/: layout.py  new_stage.py  stage_manager.py  window.py
tests/: layout.py
